[package]
name = "solana-block-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
solana-sdk = "1.18.7"
solana-client = "1.18.7"
solana-transaction-status = "1.18.7"
