[package]
name = "solana-block-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
prio-graph = { version = "0.2.1" }
serde = { version = "1.0.190" }
serde_json = { version = "1.0.108" }
solana-sdk = "1.18.7"
solana-client = "1.18.7"
solana-transaction-status = "1.18.7"
